...
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
            <connections>
                <outlet property="delegate" destination="Voe-Tx-rLC" id="GzC-gU-4Uq"/>
...
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="GeoTag" customModuleProvider="target">
            <connections>
                <outlet property="mapViewController" destination="Go6-yP-GH9" id="kvs-CY-ry5"/>
...
            </connections>
        </viewController>
        <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
            <items>
                <menuItem title="GeoTag" id="1Xt-HY-uBw">
...
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="m54-Is-iLE"/>
                            <menuItem title="Close" keyEquivalent="w" id="DVo-aG-piG">
                                <connections>
                                    <action selector="performClose:" target="-1" id="HmO-Ls-i7Q"/>
...
                                </connections>
                            </menuItem>
                            <menuItem title="Discard changes" id="KaW-ft-85H">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
...
                    </menu>
                </menuItem>
                <menuItem title="Edit" id="5QF-Oa-p0T">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Edit" id="W48-6f-4Dl">
...
                                                    <tableColumns>
                                                        <tableColumn identifier="imageName" editable="NO" width="162" minWidth="40" maxWidth="1000" id="gce-uz-HJd">
                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Image Name">
                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
...
                                                        </tableColumn>
                                                        <tableColumn identifier="dateTime" editable="NO" width="154" minWidth="40" maxWidth="1000" id="QOH-5Z-eM4">
                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Date/Time">
                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
...
                                                            <font key="font" metaFont="system"/>
                                                            <segments>
                                                                <segment label="Standard" width="90"/>
                                                                <segment label="Hybrid" width="89" selected="YES" tag="1"/>
                                                                <segment label="Satellite" width="88"/>
                                                            </segments>
...
