...
        VStack(alignment: .leading) {
            List(selection: $selection) {
                Button {
                    masData.searchText = ""
                    mapFocus.wrappedValue = nil
                } label: {
                    Text("Cancel")
                        .padding(.horizontal)
                }
                .padding(.vertical)
                .listRowSeparator(.hidden)

                Section {
...
                            leading: leadingInset,
                            bottom: 0,
                            trailing: 0))
                    Button {
                        masData.clearPlaces()
                    } label: {
                        Text("Clear list")
                    }
                    .padding(.vertical)
                    .padding(.leading, leadingInset)
                } header: {
                    Text("Previously selected locations:")
                        .font(.subheadline)
...
